[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gravix"
version = "0.0.1rc0"
description = "Embedded, high-performance local-first engine for AI agent retrieval and memory"
readme = "README.md"
requires-python = ">=3.10,<3.15"
authors = [
    {name = "dichters", email = "dichterszergn@gmail.com"}
]
dependencies = [
    "ladybug==0.16.1"
]

[project.scripts]
gravix = "gravix.cli:main"
